<resources>
    <string name="app_name">DatabindingDemo</string>
    <string name="name">Name</string>
    <string name="programme">Programme</string>
    <string name="textview">TextView</string>
    <string name="age">Age</string>
    <string name="set_value">SET VALUE</string>
    <string name="display">DISPLAY</string>
    <string name="Age">TextView</string>
    <string name="Programme">TextView</string>
    <string name="btndisplay">Button</string>
    <string name="setValu">Button</string>
    <string name="Lname">Name</string>
    <string name="Lage">Age</string>
    <string name="Lprogramme">Programme</string>
    <string name="Bdisplay">DISPLAY</string>
    <string name="Bset_value">SET VALUE</string>
</resources>