<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<data>
    <variable
        name="myData"
        type="com.example.databindingdemo.Student" />
</data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Bdisplay"
        app:layout_constraintTop_toBottomOf="@+id/Programme"
        tools:ignore="DuplicateSpeakableTextCheck"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/Lname"
        app:layout_constraintEnd_toStartOf="@+id/tvName"
        app:layout_constraintTop_toTopOf="@+id/tvName" />

    <TextView
        android:id="@+id/Age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lage"
        app:layout_constraintEnd_toStartOf="@+id/tvAge"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <TextView
        android:id="@+id/Programme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lprogramme"
        app:layout_constraintEnd_toStartOf="@+id/tvProgramme"
        app:layout_constraintTop_toBottomOf="@+id/Age" />

    <TextView
        android:id="@+id/tvProgramme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Programme"
        app:layout_constraintTop_toBottomOf="@+id/tvAge"
        tools:layout_editor_absoluteX="104dp" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="189dp" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Age"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="212dp" />

    <Button
        android:id="@+id/btnSetValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/Bset_value"
        app:layout_constraintBottom_toBottomOf="@+id/btnDisplay"
        app:layout_constraintStart_toEndOf="@+id/btnDisplay"
        app:layout_constraintTop_toTopOf="@+id/btnDisplay"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>